--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
+// android/settings.gradle
+
 pluginManagement {
     def flutterSdkPath = {
         def properties = new Properties()
@@ -19,10 +21,9 @@ pluginManagement {
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.9.1" apply false
-    // START: FlutterFire Configuration
-    id "com.google.gms.google-services" version "4.3.15" apply false
-    id "com.google.firebase.crashlytics" version "2.8.1" apply false
-    // END: FlutterFire Configuration
-    id "org.jetbrains.kotlin.android" version "2.2.21" apply false
+    id "com.google.gms.google-services" version "4.4.2" apply false
+    id "com.google.firebase.crashlytics" version "3.0.2" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
 }
+
 include ":app"
